imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@//geography/africa
img_DATA = \
	algeria.png \
	all_south_africa.png \
	angola.png \
	benin.png \
	botswana.png \
	burkina_faso.png \
	burundi.png \
	cameroon.png \
	central_african_republic.png \
	chad.png \
	democratic_republic_of_congo.png \
	djibouti.png \
	egypt.png \
	equatorial_guinea.png \
	eritrea.png \
	ethiopia.png \
	gabon.png \
	ganbia.png \
	ghana.png \
	guinea_bissau.png \
	guinea.png \
	ivory_coast.png \
	kenya.png \
	lesotho.png \
	liberia.png \
	libya.png \
	madagascar.png \
	malawi.png \
	mali.png \
	mauritania.png \
	moroco.png \
	mozambique.png \
	namibia.png \
	nigeria.png \
	niger.png \
	north_africa.png \
	republic_of_congo.png \
	rwanda.png \
	senegal.png \
	sierra_leone.png \
	somalia.png \
	south_africa.png \
	sudan.png \
	swaziland.png \
	tanzania.png \
	togo.png \
	tunisia.png \
	uganda.png \
	western_sahara.png \
	zambia.png \
	zimbabwe.png

EXTRA_DIST = $(img_DATA)
