imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@//geography/afrique
img_DATA = \
	africa.png \
	algeria.png \
	angola.png \
	benin.png \
	botswana.png \
	burkina_faso.png \
	cameroon.png \
	chad.png \
	congo.png \
	egypt.png \
	eritrea.png \
	ethiopia.png \
	gabon.png \
	ghana.png \
	guinea.png \
	ivory_coast.png \
	kenya.png \
	liberia.png \
	libya.png \
	madagascar.png \
	malawi.png \
	mali.png \
	mauritania.png \
	moroco.png \
	mozambique.png \
	namibia.png \
	nigeria.png \
	niger.png \
	rep_centrafrique.png \
	rep_congo.png \
	senegal.png \
	somalia.png \
	soudan.png \
	south_africa.png \
	tanzania.png \
	togo.png \
	tunisia.png \
	uganda.png \
	zambia.png \
	zimbabwe.png

EXTRA_DIST = $(img_DATA)
