imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@//geography/centralamerica
img_DATA = \
	bahamas.png \
	belize.png \
	bg_central_america.png \
	bg_central_america_blank.png \
	costa_rica.png \
	cuba.png \
	dominican_republic.png \
	el_salvador.png \
	guatemala.png \
	haiti.png \
	honduras.png \
	jamaica.png \
	mexico.png \
	nicaragua.png \
	panama.png \
	puerto_rico.png
EXTRA_DIST = $(img_DATA)
