imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@//geography/europe
img_DATA = \
	albania.png \
	austria.png \
	belarus.png \
	belgium.png \
	bosnia_herzegovina.png \
	bulgaria.png \
	croatia.png \
	cyprus.png \
	czech.png \
	denmark.png \
	estonia.png \
	europe.png \
	finland.png \
	france.png \
	germany.png \
	greece.png \
	hungary.png \
	iceland.png \
	ireland.png \
	italy.png \
	latvia.png \
	lithuania.png \
	luxembourg.png \
	macedonia.png \
	moldova.png \
	netherland.png \
	norway.png \
	poland.png \
	portugal.png \
	romania.png \
	russia.png \
	serbia.png \
	montenegro.png \
	slovakia.png \
	slovenia.png \
	spain.png \
	sweden.png \
	switz.png \
	turkey.png \
	ukraine.png \
	united_kingdom.png

EXTRA_DIST = $(img_DATA)
