imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@//geography/oceania
img_DATA = \
	american_samoa.png \
	australia.png \
	bg_oceania.png \
	cook_islands.png \
	east_timor.png \
	fiji.png \
	french_polynesia.png \
	hawaii.png \
	indonesia.png \
	kiribati.png \
	marshall_islands.png \
	micronesia.png \
	new_caledonia.png \
	new_zealand.png \
	northern_mariana_islands.png \
	palau.png \
	papua_new_guinea.png \
	pitcairn_islands.png \
	solomon_islands.png \
	tonga.png \
	tuvalu.png \
	us_minor.png \
	vanuatu.png

EXTRA_DIST = $(img_DATA)
