imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@//geography/southamerica
img_DATA = \
	argentina.png \
	bolivia.png \
	brazil.png \
	chile.png \
	colombia.png \
	ecuador.png \
	french_guiana.png \
	guyana.png \
	panama.png \
	paraguay.png \
	peru.png \
	south_america.png \
	suriname.png \
	uruguay.png \
	venezuela.png

EXTRA_DIST = $(img_DATA)
